# sensor-net-web-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  index.html  nginx.conf  package-lock.json  package.json  server.js  style.sass  vue.config.js
.github/workflows/: main.yml
etc_nginx/: sensor-net-web-app-site
icons/: font.css
public/: index.html
scripts/: deploy.sh
src/: App.js  App.vue  Chart.js  EquipmentList.js  EquipmentListItem.js  Repo.js  Repo.mock.js  agents.rs  components.rs  main.js  main.rs  objects.rs  utils.rs
src/agents/: fetcher.rs  notifier.rs
src/components/: Equipment.vue  HelloWorld.vue  LineChart.vue  Sensor.vue  nav_bar.rs  overview.rs  parameter.rs  router.rs  top.rs
src/objects/: equipment.rs  js_error.rs  measurement_data.rs  parameter_type.rs  sensor.rs
src/pages/: home.rs
src/router/: index.js
src/views/: ExternalApi.vue  Home.vue
